# monumental-interview

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  bootstrap.sh  build.sh  main.cpp  output.txt  pixi.toml  robot-client  run.sh  writeup.md
src/: controller.cpp  controller.h  main.cpp  particle_filter.cpp  particle_filter.h  path_generator.cpp  path_generator.h  robot.h  robot_client.cpp  robot_client.h  robot_model.cpp  robot_model.h  types.h  visualizer.cpp  visualizer.h
